[package]
name = "zjit"
version = "0.0.0"
edition = "2021"        # Rust 2021 edition to compile with
rust-version = "1.58.0" # Minimally supported rust version
publish = false         # Don't publish to crates.io

[lib]
crate-type = ["staticlib"]

[profile.release]
# NOTE: --enable-zjit builds use `rustc` without going through Cargo. You
# might want to update the `rustc` invocation if you change this profile.
opt-level = 3
# The extra robustness that comes from checking for arithmetic overflow is
# worth the performance cost for the compiler.
overflow-checks = true
# Generate debug info
debug = true
# Use ThinLTO. Much smaller output for a small amount of build time increase.
lto = "thin"

[dependencies]
